Added directions ability through google API

--- a/allcabs/allcabs/Info.plist
+++ b/allcabs/allcabs/Info.plist
@@ -53,5 +53,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationUsageDescription</key> 
+	<string>Your message1</string> 
+	<key>NSLocationAlwaysUsageDescription</key> 
+	<string>Your message2</string> 
+	<key>NSLocationWhenInUsageDescription</key> 
+	<string>Your message3</string>
 </dict>
 </plist>
