Added code for sending tracking info by text

--- a/allcabs/allcabs/Info.plist
+++ b/allcabs/allcabs/Info.plist
@@ -21,9 +21,11 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.awesomesauce.helm</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb955031367840252</string>
+				<string>Helm</string>
 			</array>
 		</dict>
 	</array>
